--- a/app/views/static/home.erb
+++ b/app/views/static/home.erb
@@ -2,8 +2,9 @@
   <div class="jumbotron">
     <h1 id="main-title-header">sparewall</h1>
     <p>connects people with spare walls with those who like to paint walls</p>
-    <p><a class="btn btn-primary btn-lg" href="/about" role="button">learn more</a>
-    <a class="btn btn-primary btn-lg" id="homeregbtn" href="/register" role="button">sign up</a></p>
-    <a class="btn btn-primary btn-lg" href="/login" role="button">login</a></p>
+    <p><a class="btn btn-primary btn-lg" href="/about" role="button">learn more <i class="fa fa-graduation-cap"></i></a>
+    <a class="btn btn-primary btn-lg" id="homeregbtn" href="/register" role="button">sign up <i class="fa fa-user-plus"></i></a></p>
+    <a class="btn btn-primary btn-lg" href="/login" role="button">login <i class="fa fa-sign-in"></i></a></p>
+    <i class="fa fa-diamond"></i>
   </div>
 </body>
