--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,4 +1,4 @@
-<h2 class="page-header">edit profile</h2>
+<h2 class="page-header">| edit profile |</h2>
 <form id="edit" method="post" action="/users/<%= @user.id %>">
   <input type="hidden" name="_method" value="put">
   <div class="form-group">
