--- a/app/views/walls/completed_walls.erb
+++ b/app/views/walls/completed_walls.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 
 
-  <h1 class="page-header">completed walls area</h1>
+  <h1 class="page-header">| completed walls area |</h1>
 
   <div class="row">
     <% @walls.each do |wall| %>
