--- a/app/views/walls/indexmap.erb
+++ b/app/views/walls/indexmap.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 
 <% if is_artist? %>
-<h1 class="page-header">map of sparewalls</h1>
+<h1 class="page-header">| map of sparewalls |</h1>
 <% else %>
-<h1 class="page-header">map of completed walls</h1>
+<h1 class="page-header">| map of completed walls |</h1>
 <% end %>
 
 
