--- a/app/views/walls/new.erb
+++ b/app/views/walls/new.erb
@@ -1,4 +1,4 @@
-<h2 class="page-header">add a wall</h2>
+<h2 class="page-header">| add a wall |</h2>
 
 <form id="walls" method="post" action="/walls" enctype="multipart/form-data">
   
