--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,6 +6,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=<%= gmap_key %>"></script>
   
   <link href='https://fonts.googleapis.com/css?family=Play:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
   <body>
     <header>
@@ -30,22 +32,22 @@
             <ul class="nav navbar-nav navbar-right">
 
 
-            <li><a href="/about">about</a></li>
+            <li><a href="/about"><i class="fa fa-graduation-cap"></i> about</a></li>
           
               <% if is_logged_in? %>
 
                 <% if is_artist? %>
-                  <li><a href="/walls">sparewalls</a></li>
-                  <li><a href="/completed_walls">completed walls</a></li>
+                  <li><a href="/walls"><i class="fa fa-paint-brush"></i> sparewalls</a></li>
+                  <li><a href="/completed_walls"><i class="fa fa-check"></i> completed walls</a></li>
                 <% else %>
-                  <li><a href="/users">artists</a></li>
-                  <li><a href="/wallsmap">see map</a></li>
-                  <li><a href="/completed_walls">completed walls</a></li>
+                  <li><a href="/users"><i class="fa fa-user"></i> artists</a></li>
+                  <li><a href="/wallsmap"><i class="fa fa-globe"></i> see map</a></li>
+                  <li><a href="/completed_walls"><i class="fa fa-check"></i> completed walls</a></li>
               <% end %>  
 
     
               <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-home"></i>  <%= current_user.username %> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="/users/<%= current_user.id %>">profile</a></li>
                       <li><a href="/users/<%= current_user.id %>/edit">edit profile</a></li>
@@ -55,9 +57,9 @@
 
               <% else %>
 
-              <li><a href="/completed_walls">completed walls</a></li>
-              <li><a href="/register">register</a></li>
-              <li><a href="/login">login</a></li>
+              <li><a href="/completed_walls"><i class="fa fa-check"></i> completed walls</a></li>
+              <li><a href="/register"><i class="fa fa-user-plus"></i> register</a></li>
+              <li><a href="/login"><i class="fa fa-sign-in"></i> login</a></li>
               <% end %>
 
             </ul>
