--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -2,9 +2,9 @@
 
 
   <% if current_user.user_type == "artist" %>
-  <h2 class="page-header">wall owners</h2>
+  <h2 class="page-header">| wall owners |</h2>
   <% else %>
-  <h2 class="page-header">artists</h2>
+  <h2 class="page-header">| artists |</h2>
   <% end %>
 
 
