--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-<h2 class="page-header"><%= @user.username %> (<%= @user.user_type %>)</h2>
+<h2 class="page-header"> <%= @user.username %> (<%= @user.user_type %>) </h2>
 
   <div class="row">
 
@@ -17,7 +17,7 @@
       <dl class="dl-horizontal">
         <dt>full name:</dt>
         <dd><%= @user.first_name %> <%= @user.last_name %></dd><br>
-        <dt>email address:</dt>
+        <dt><i class="fa fa-envelope"> : </i></dt>
         <dd><%= @user.email %></dd>
       </dl>
 
