--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -72,7 +72,7 @@ img:hover {
 }
 
 .jumbotron{
-  background: rgba(230, 230, 230, 0.8); 
+  background: rgba(252,252,252,0.9); 
   margin-top: 240px;
   text-align: center;
   
@@ -82,7 +82,7 @@ img:hover {
   text-align:center;
   border-bottom: 3px solid rgba(1,87,99,1);
   margin-top: 0px;
-  font-size: 40px;
+  font-size: 36px;
   font-weight:700;
 }
 
@@ -154,7 +154,7 @@ img:hover {
 }
 
 .navbar-default {
-  background: transparent;
+  background: rgba(252,252,252,0.9);
   border-bottom: 4px solid rgba(30,30,30,.7);
 }
 
@@ -244,7 +244,7 @@ footer {
 .navbar-default .navbar-nav>li>a{
   color:rgba(1,87,99,1);
   font-size: 16px;
-  border-left: 1px solid rgba(1,87,99,1);
+  // border-left: 1px solid rgba(1,87,99,1);
 }
 
 .profilewalls{
