committing before trying out carousel

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -248,7 +248,10 @@ footer {
 }
 
 .profilewalls{
-  border-bottom: 2px solid 33,68,209,1;
+  border-bottom: 2px solid rgba(1,87,99,1);
+  text-align: center;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .btn-primary{
