--- a/app/views/walls/completed_walls.erb
+++ b/app/views/walls/completed_walls.erb
@@ -3,30 +3,46 @@
 
   <h1 class="page-header">| completed walls area |</h1>
 
-  <div class="row">
-    <% @walls.each do |wall| %>
-    <div>
-      <% if !!(wall.owner_id.present? && wall.artist_id.present?) %>
+  
 
-      <div class="col-md-6">
-        <ul class="media-list">
-          <li class="media">
-            <div class="media-left">
-              <a href="/walls/<%= wall.id %>">
-              </a>
-            </div>
-            <div class="media-body" id="completedpic">
-              <a href="/walls/<%= wall.id %>">
-              <img src="<%= wall.image %>" width="440px" height:"440px">
-              </a>
-            </div>
-          </li>
-        </ul>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="/images/grungy-brick-wall.jpg" alt="Chania" width:"600px" height:"400px">
+      </div>
+
+      <% @walls.each do |wall| %>
+      <% if !!(wall.owner_id.present? && wall.artist_id.present?) %>
+      <div class="item">
+        <img src="<%= wall.image %>" alt="image">
+          <div class="carousel-caption">
+              <h3><%= wall.title %></h3>
+              <p><%= wall.owner.username %></p>
+          </div>
       </div>
       <% end %>
       <% end %>
+
     </div>
 
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
 
