--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,4 +84,6 @@ footer { background-color: rgba(0, 0, 0, 0.5); margin-top: 250px; font-size: 1.5
 
 .btn-primary { background-color: rgba(1, 87, 99, 0.7); }
 
+#myCarousel { height: 400px; width: 700px; margin-left: 200px; }
+
 /*# sourceMappingURL=style.css.map */
