--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -259,7 +259,8 @@ footer {
 }
 
 #myCarousel{
-  height: 400px;
-  width: 700px;
-  margin-left: 200px;
+  height: 450px;
+  width: 900px;
+  margin-left: 100px;
+  margin-top: 80px;
 }
