--- a/app/views/walls/completed_walls.erb
+++ b/app/views/walls/completed_walls.erb
@@ -18,6 +18,11 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img src="/images/st3.jpg" alt="Chania" >
+        <div class="carousel-caption">
+          <h3>completed walls carousel</h3>
+          <p>displays all the sparewalls which have been painted by an artist</p><br>
+        </div>
+
       </div>
 
       <% @walls.each do |wall| %>
