--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -26,7 +26,7 @@
           <a href="/users/<%= user.id %>">
 
             <% if user.image %>
-            <img class="usersidx" src="<%= user.image %>" alt="<%= user.username %>'s image" width="300px" height:"300px">
+            <img class="usersidx imgshadow" src="<%= user.image %>" alt="<%= user.username %>'s image" width="300px" height:"300px">
             <% else %>
             <img class="media-object" src="/images/default.png" alt="<%= user.username %>'s image">
             <% end %>
