--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -8,7 +8,7 @@
 
     <h3 id="aboutuser">about</h3>
       <% if @user.image %>
-      <img class="media-object" src="<%= @user.image %>" alt="<%= @user.username %>'s image" width="300px" height:"300px">
+      <img class="media-object imgshadow" src="<%= @user.image %>" alt="<%= @user.username %>'s image" width="300px" height:"300px">
       <% else %>
       <img class="media-object" src="/images/default.png" alt="<%= @user.username %>'s image">
       <% end %>
@@ -21,10 +21,10 @@
         <dd><%= @user.email %></dd>
       </dl>
 
-      <p id="contactbtn"><strong><a class="btn btn-primary" href="mailto:<%=@user.email%>?Subject=i wanna paint your wall!" id="email_form">&lt; Contact Me! &gt;</a></strong></p><br><br>
+      <a id="contactbtn" class="btn btn-primary" href="mailto:<%=@user.email%>?Subject=i wanna paint your wall!" id="email_form">&lt; Contact Me! &gt;</a>
 
       <% if current_user.user_type == "wall_owner" %>
-      <strong><p id="add_a_wall"><a href="/walls/new">Add a new wall</a></p></strong>
+      <a id="add_a_wall" class="btn btn-primary" href="/walls/new">Add a new wall</a>
       <% end %>
 
     </div>
